Added Needed Files

--- a/src/AlArz.DbMigrator/appsettings.json
+++ b/src/AlArz.DbMigrator/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=ULTIMITATS;  Database=ALARZNew11; Trusted_Connection=True; trustServerCertificate=true;"
-    // "Default": "Server=192.168.0.153; trustServerCertificate=true; Database=AlArzNew; User=bld_user; Password=bld@1234;"
-  },
+    "ConnectionStrings": {
+        "Default": "Data Source=DESKTOP-PJJPVP8\\SQLEXPRESS;Initial Catalog=Restaurent;Integrated Security=True;TrustServerCertificate=True"
+        // "Default": "Server=192.168.0.153; trustServerCertificate=true; Database=AlArzNew; User=bld_user; Password=bld@1234;"
+    },
   "IdentityServer": {
     "Clients": {
       "AlArz_Web": {
