--- a/src/AlArz.HttpApi.Host/appsettings.json
+++ b/src/AlArz.HttpApi.Host/appsettings.json
@@ -5,11 +5,11 @@
     //"CorsOrigins": "https://*.AlArz.com,http://localhost:4200",
     //"RedirectAllowedUrls": "http://localhost:4200"
   },
-  "ConnectionStrings": {
-    "Default": "Server=ULTIMITATS;  Database=ALARZNew11; Trusted_Connection=True; trustServerCertificate=true;"
-    // "Default": "Server=192.168.0.153; trustServerCertificate=true; Database=AlArz; User=bld_user; Password=bld@1234;"
+    "ConnectionStrings": {
+        "Default": "Data Source=DESKTOP-PJJPVP8\\SQLEXPRESS;Initial Catalog=Restaurent;Integrated Security=True;TrustServerCertificate=True"
+        // "Default": "Server=192.168.0.153; trustServerCertificate=true; Database=AlArz; User=bld_user; Password=bld@1234;"
 
-  },
+    },
   "AuthServer": {
     "Authority": "https://localhost:44340",
     "RequireHttpsMetadata": "false"
