--- a/src/AlArz.Application/AlArz.Application.csproj
+++ b/src/AlArz.Application/AlArz.Application.csproj
@@ -22,6 +22,10 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.2.2" />
